--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,13 +28,12 @@ repos:
       - id: pydocstyle
         args: ["--add-select=D213,D404", "--ignore=D202,D212,D406,D407,D203"]
         exclude: "test"
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v0.780
-  #   hooks:
-  #     - id: mypy
-  #       exclude: "^example|conf.py$"
-  #       additional_dependencies:
-  #         - "sqlalchemy-stubs"
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.790
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          - "sqlalchemy-stubs"
   # - repo: https://github.com/pre-commit/mirrors-pylint
   #   rev: "v2.6.0"
   #   hooks:
