--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,11 +34,10 @@ repos:
       - id: mypy
         additional_dependencies:
           - "sqlalchemy-stubs"
-  # - repo: https://github.com/pre-commit/mirrors-pylint
-  #   rev: "v2.6.0"
-  #   hooks:
-  #     - id: pylint
-  #       exclude: "^example|conf.py$"
+  - repo: https://github.com/pre-commit/mirrors-pylint
+    rev: "v2.6.0"
+    hooks:
+      - id: pylint
   # - repo: https://github.com/prettier/pre-commit
   #   rev: "v2.1.2"
   #   hooks:
