--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,33 +38,32 @@ repos:
     rev: "v2.6.0"
     hooks:
       - id: pylint
-  - repo: https://github.com/prettier/pre-commit
-    rev: "v2.1.2"
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v2.2.0"
     hooks:
       - exclude: ".vscode"
         id: prettier
-  # - repo: https://github.com/pre-commit/pre-commit-hooks
-  #   rev: v3.2.0
-  #   hooks:
-  #     - id: check-added-large-files
-  #     - id: check-case-conflict
-  #     - id: check-docstring-first
-  #       exclude: ".*\/dist\/.*"
-  #     - id: check-merge-conflict
-  #     - id: debug-statements
-  #     - id: name-tests-test
-  #       args: ["--django"]
-  #       exclude: "\/helpers.py$"
-  #     - id: trailing-whitespace
-  # - repo: https://github.com/Lucas-C/pre-commit-hooks
-  #   rev: v1.1.9
-  #   hooks:
-  #     - id: forbid-crlf
-  #     - id: remove-crlf
-  #     - id: forbid-tabs
-  #     - id: remove-tabs
-  # - repo: https://github.com/DavidAnson/markdownlint-cli2
-  #   rev: v0.0.11
-  #   hooks:
-  #     - id: markdownlint-cli2
-  #       language_version: system
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.3.0
+    hooks:
+      - id: check-added-large-files
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: check-merge-conflict
+      - id: debug-statements
+      - id: name-tests-test
+        args: ["--django"]
+        exclude: "\/helpers.py$"
+      - id: trailing-whitespace
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.1.9
+    hooks:
+      - id: forbid-crlf
+      - id: remove-crlf
+      - id: forbid-tabs
+      - id: remove-tabs
+  - repo: https://github.com/DavidAnson/markdownlint-cli2
+    rev: v0.0.11
+    hooks:
+      - id: markdownlint-cli2
+        language_version: system
