--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v2.2.0"
     hooks:
-      - exclude: ".vscode"
+      - exclude: ".vscode|.ts$"
         id: prettier
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.3.0
@@ -67,3 +67,14 @@ repos:
     hooks:
       - id: markdownlint-cli2
         language_version: system
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v7.14.0"
+    hooks:
+      - id: eslint
+        files: \.ts$
+        types: [file]
+        args: ["--fix"]
+        additional_dependencies:
+          - eslint@7.14.0
+          - "@angular-eslint/eslint-plugin@0.8.0-beta.2"
+          - "@typescript-eslint/eslint-plugin@4.8.2"
