--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,3 +79,5 @@ repos:
           - "@angular-eslint/eslint-plugin@0.8.0-beta.2"
           - "@typescript-eslint/eslint-plugin@4.8.2"
           - eslint-plugin-prettier@3.1.4
+          - prettier@2.2.1
+          - eslint-config-prettier@6.15.0
