--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -41,5 +41,8 @@
     "@aws-cdk/core": "1.75.0",
     "source-map-support": "^0.5.16",
     "uuid": "^8.3.1"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
