--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,7 +73,7 @@ repos:
       - id: eslint
         files: \.ts$
         types: [file]
-        args: ["--fix"]
+        args: ["--fix", "--ext .ts"]
         additional_dependencies:
           - eslint@7.14.0
           - "@angular-eslint/eslint-plugin@0.8.0-beta.2"
