--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -14,11 +14,11 @@
     "deploy:web": "cdk deploy EditorWebStack --require-approval never"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.78.0",
+    "@aws-cdk/assert": "1.82.0",
     "@types/jest": "^26.0.19",
     "@types/node": "10.17.27",
     "@types/uuid": "^8.3.0",
-    "aws-cdk": "1.78.0",
+    "aws-cdk": "1.82.0",
     "jest": "^26.4.2",
     "prettier": "^2.2.0",
     "ts-jest": "^26.2.0",
@@ -26,19 +26,20 @@
     "typescript": "~4.1.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.78.0",
-    "@aws-cdk/aws-certificatemanager": "1.78.0",
-    "@aws-cdk/aws-cloudfront": "1.78.0",
-    "@aws-cdk/aws-cloudfront-origins": "1.78.0",
-    "@aws-cdk/aws-codedeploy": "1.78.0",
-    "@aws-cdk/aws-cognito": "1.78.0",
-    "@aws-cdk/aws-iam": "1.78.0",
-    "@aws-cdk/aws-lambda": "1.78.0",
-    "@aws-cdk/aws-route53": "1.78.0",
-    "@aws-cdk/aws-route53-targets": "1.78.0",
-    "@aws-cdk/aws-s3": "1.78.0",
-    "@aws-cdk/aws-s3-deployment": "1.78.0",
-    "@aws-cdk/core": "1.78.0",
+    "@aws-cdk/aws-apigateway": "1.82.0",
+    "@aws-cdk/aws-certificatemanager": "1.82.0",
+    "@aws-cdk/aws-cloudfront": "1.82.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.82.0",
+    "@aws-cdk/aws-codedeploy": "1.82.0",
+    "@aws-cdk/aws-cognito": "1.82.0",
+    "@aws-cdk/aws-iam": "1.82.0",
+    "@aws-cdk/aws-lambda": "1.82.0",
+    "@aws-cdk/aws-route53": "1.82.0",
+    "@aws-cdk/aws-route53-targets": "1.82.0",
+    "@aws-cdk/aws-s3": "1.82.0",
+    "@aws-cdk/aws-s3-deployment": "1.82.0",
+    "@aws-cdk/aws-ssm": "1.82.0",
+    "@aws-cdk/core": "1.82.0",
     "source-map-support": "^0.5.16"
   },
   "prettier": {
